--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/DangKyHiemMau.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/DangKyHiemMau.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Models.EF.PhieuDKHM
 @{
     ViewBag.Title = "DangKyHiemMau";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -43,14 +43,14 @@
                             </label>
 
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1">
-                                </div>
+                                
+                                <input class="primary-radio" type="radio" name="r1" style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1">
-                                </div>
+                             
+                                <input class="primary-radio" type="radio" name="r1" style="height: 20px; width: 20px;vertical-align: middle">
+                                
                             </label>
 
                         </div>
@@ -65,14 +65,14 @@
                                 </p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1a">
-                                </div>
+
+                                <input class="primary-radio" type="radio" name="r2"style="height: 20px; width: 20px;vertical-align: middle">
+
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1a ">
-                                </div>
+
+                                <input class="primary-radio" type="radio" name="r2" style="height: 20px; width: 20px;vertical-align: middle">
+
                             </label>
                         </div>
 
@@ -90,14 +90,14 @@
                             </label>
 
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1c">
-                                </div>
+                               
+                                <input class="primary-radio" type="radio" name="r3" style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r1c">
-                                </div>
+                               
+                                    <input class="primary-radio" type="radio" name="r3"style="height: 20px; width: 20px;vertical-align: middle">
+                                
                             </label>
                         </div>
 
@@ -106,14 +106,14 @@
                                 <p> Nổi hạch kéo dài?</p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r3">
-                                </div>
+                               
+                                <input class="primary-radio" type="radio" name="r4" style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r3">
-                                </div>
+                                
+                                    <input class="primary-radio" type="radio" name="r4"style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                         </div>
 
@@ -122,14 +122,14 @@
                                 <p> Xăm mình, xỏ lỗi qua da (tai, mũi...)</p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r5">
-                                </div>
+                               
+                                    <input class="primary-radio" type="radio" name="r5"style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r5">
-                                </div>
+                               
+                                    <input class="primary-radio" type="radio" name="r5"style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                         </div>
 
@@ -138,14 +138,14 @@
                                 <p> Được truyền máu hay chế phẩm máu</p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r9">
-                                </div>
+                              
+                                    <input class="primary-radio" type="radio" name="r9"style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r9">
-                                </div>
+                               
+                                    <input class="primary-radio" type="radio" name="r9"style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                         </div>
 
@@ -154,49 +154,49 @@
                                 <p> Sử dụng ma túy, tiêm chích</p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r11">
-                                </div>
+                              
+                                    <input class="primary-radio" type="radio" name="r11"style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r11">
-                                </div>
+                               
+                                    <input class="primary-radio" type="radio" name="r11"style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                         </div>
 
                         <div>
                             <label class="col-md-9 mt-10">
                                 <p>
-                                    Quan hệ tình dục với người nhiễm HIV hoặc có nguy cơ cao lây qua đường lây nhiễm
+                                    Quan hệ thân mật với người nhiễm HIV hoặc có nguy cơ cao lây qua đường lây nhiễm
                                     HIV
                                 </p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r13">
-                                </div>
+                             
+                                    <input class="primary-radio" type="radio" name="r13"style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r13">
-                                </div>
+                            
+                                    <input class="primary-radio" type="radio" name="r13"style="height: 20px; width: 20px;vertical-align: middle">
+                               
                             </label>
                         </div>
 
                         <div>
                             <label class="col-md-9 mt-10">
-                                <p> Quan hệ tình dục với người cùng giới</p>
+                                <p> Quan hệ thân mật với người cùng giới</p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r15">
-                                </div>
+                           
+                                    <input class="primary-radio" type="radio" name="r15" style="height: 20px; width: 20px;vertical-align: middle">
+                             
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r15">
-                                </div>
+                              
+                                    <input class="primary-radio" type="radio" name="r15"style="height: 20px; width: 20px;vertical-align: middle">
+                           
                             </label>
                         </div>
 
@@ -206,12 +206,12 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r17">
+                                    <input class="primary-radio" type="radio" name="r17" style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r17">
+                                    <input class="primary-radio" type="radio" name="r17" style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
@@ -222,12 +222,12 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r19">
+                                    <input class="primary-radio" type="radio" name="r19"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r19">
+                                    <input class="primary-radio" type="radio" name="r19"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
@@ -244,12 +244,12 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r21">
+                                    <input class="primary-radio" type="radio" name="r21"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r21">
+                                    <input class="primary-radio" type="radio" name="r21"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
@@ -260,12 +260,12 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r23">
+                                    <input class="primary-radio" type="radio" name="r23"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r23">
+                                    <input class="primary-radio" type="radio" name="r23"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
@@ -276,17 +276,17 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r25">
+                                    <input class="primary-radio" type="radio" name="r25"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r25">
+                                    <input class="primary-radio" type="radio" name="r25"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" style="margin-top:10px">
                             <label class="col-md-9 ">
                                 <p>
                                     <b style="color:rgb(0, 0, 0);">
@@ -296,14 +296,12 @@
                                 </p>
                             </label>
                             <label class="col-lg-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r27">
-                                </div>
+
+                                    <input class="primary-radio" type="radio" name="r27"style="height: 20px; width: 20px;vertical-align: middle">
+                              
                             </label>
                             <label class="col-md-1">
-                                <div>
-                                    <input class="primary-radio" type="radio" name="r27">
-                                </div>
+                                <input class="primary-radio" type="radio" name="r27"style="height: 20px; width: 20px;vertical-align: middle">                              
                             </label>
                         </div>
 
@@ -317,12 +315,12 @@
                             </label>
                             <label class="col-lg-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r29">
+                                    <input class="primary-radio" type="radio" name="r29"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                             <label class="col-md-1">
                                 <div>
-                                    <input class="primary-radio" type="radio" name="r39">
+                                    <input class="primary-radio" type="radio" name="r39"style="height: 20px; width: 20px;vertical-align: middle">
                                 </div>
                             </label>
                         </div>
@@ -361,7 +359,7 @@
                                 </div>
                             </label>
                             <label class="col-md-2 text-center">
-                                <div class="primary-checkbox center" style="margin-left:40% ; margin-bottom: 10%;">
+                                <div class="primary-checkbox center" style="margin-left: 40%;margin-bottom: 10%;height: 20px; width: 20px;vertical-align: middle">
                                     <input type="checkbox" id="default-checkbox" name=cb1>
                                     <label for="default-checkbox"></label>
 
@@ -376,9 +374,35 @@
                 </div>
             </div>
             <hr>
-            <div class="text-center">
+            <ul class="text-center">
+                @{
+                    var session8 = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
+                }
+                @if (session8 == null)
+                {
+                    <li>
+                        <a class="genric-btn primary-border circle warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</a>
+                    </li>
+
+                }
+                else
+                {
+                    <li>
+                        <a class="genric-btn primary-border circle " href="@Url.Action("DangKyHiemMau", "DTCHM")">Đăng ký tham gia</a>
+                    </li>
+                }   
+                @*@if (session8.AuthorID == "Q04")
+                {
+                    <li>
+                        <a class="btn_2 warning" href="@Url.Action("Index", "LoginClient") ">Tài khoản không hợp lệ</a>
+                        <a>(vui lòng sử dụng tài khoản cá nhân)</a>
+                    </li>
+                }*@
+
+            </ul>
+            @*<div class="text-center">
                 <a class="btn_2 " href="#">Đăng ký tham gia</a>
-            </div>
+            </div>*@
 
         </div>
     </div>
