--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Models.EF.ThongTinCaNhan
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CapnhatTTCN";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Thông tin cá nhân</h2>
+                        <h2>Cập nhật thông tin</h2>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                                         </table>
                                     </form>
                                     <div class="text-center" style="margin-top:20px">
-                                        <a href="@Url.Action("CapnhatTTCN", "NguoiDung")  " class="genric-btn primary-border radius">Cập nhật thông tin</a>
+                                        <button type="submit" class="genric-btn primary-border radius">Cập nhật thông tin</button>
                                     </div>
                                 </div>
                             </div>
@@ -176,3 +176,7 @@
         </div>
     </div>
 </section>
+
+
+
+
